Better organisation of XML files